--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@mdi/font": "^3.6.95",
     "axios": "^0.19.0",
-    "core-js": "^3.3.2",
+    "core-js": "^3.1.2",
+    "material-design-icons-iconfont": "^5.0.1",
     "roboto-fontface": "*",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.3",
+    "vue-router": "^3.0.6",
     "vuetify": "^2.1.0",
     "vuex": "^3.0.1"
   },
@@ -23,9 +23,9 @@
     "@vue/cli-service": "^4.0.0",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
-    "stylus": "^0.54.7",
+    "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
-    "vue-cli-plugin-vuetify": "^1.1.1",
+    "vue-cli-plugin-vuetify": "^1.1.0",
     "vue-template-compiler": "^2.6.10",
     "vuetify-loader": "^1.3.0"
   }
