--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "chart.js": "^2.8.0",
     "core-js": "^3.1.2",
     "material-design-icons-iconfont": "^5.0.1",
     "roboto-fontface": "*",
     "vue": "^2.6.10",
+    "vue-chartjs": "^3.4.2",
     "vue-router": "^3.0.6",
     "vuetify": "^2.1.0",
     "vuex": "^3.0.1"
