--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "axios": "^0.19.0",
     "chart.js": "^2.8.0",
     "core-js": "^3.1.2",
+    "highcharts": "^7.2.0",
+    "highcharts-vue": "^1.3.5",
     "material-design-icons-iconfont": "^5.0.1",
     "roboto-fontface": "*",
     "vue": "^2.6.10",
