--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.1.2",
     "highcharts": "^7.2.0",
     "highcharts-vue": "^1.3.5",
+    "json-server": "^0.15.1",
     "material-design-icons-iconfont": "^5.0.1",
     "roboto-fontface": "*",
     "vue": "^2.6.10",
